<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="F_AuswertungBefehlstastenVonTP" Id="{0f0f9481-1dda-48f8-a23c-d783f95d1df7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_AuswertungBefehlstastenVonTP : BOOL
VAR_INPUT
	tastenWert : INT;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Netzwerk: 1 ===============================================================================================
Auswertung Befehlstasten von TP *)


//L 0  -- Lade die Zahl in AKKU 1 und schiebe aktuelles in AKKU 2
//T "MB 6" MB6 --Bits zurück auf 0
//VAT.MB6 := 0; //Bits zurück auf 0 -- soweit KEINE VERWENDUNG zu erkennen

DB6.w228_Bef_Tast_Wert := tastenWert;
//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 0
//==I
//SPB Aend // Springe wenn VKE = 1 (VKE: Verknüpfungsergebnis) 

IF DB6.w228_Bef_Tast_Wert = 0 THEN
	RETURN;
END_IF


//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 30 //*** Tipp/Auto
//==I
//SPBN b30 // Springe wenn VKE = 0

//UN "M0_3_Tipp" M0.3 -- Einzel-Schritt // UND NICHT
//= "M0_3_Tipp" M0.3 -- Einzel-Schritt // Zuweisung, Bitverknüpfung

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 30 THEN //*** Tipp/Auto 
	VAT.bEinzelSchritt := NOT VAT.bEinzelSchritt; //Einzel-Schritt
END_IF

//b30: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 130 //*** Bertriebsarten-Reset
//==I
//SPBN b130 // Springe wenn VKE = 0
//S "M1.3_Stop" M1.3 -- RS Stop

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 130 THEN // *** Bertriebsarten-Reset
	VAT.bRsStop := TRUE;
END_IF


//b130: BLD 130  //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 800 (*** Bertriebsarten-Reset *)
//==I
//SPBN b800
//R "M0.6" M0.6 -- SR Start
//S "M 6.0" M6.0 -- +F Reset-Button
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 800 THEN  //*** Bertriebsarten-Reset 
	VAT.bSrStart := FALSE; //SR Start
	VAT.bFlkResetButton := TRUE; //+F Reset-Button
	
	VAT.bMagazinLeerfahren := FALSE; //Reset ...see above.
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF

//b800: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 801 //*** Reset-Button
//==I
//SPBN b801
//R "M0.6" M0.6 -- SR Start
//S "M1.3_Stop" M1.3 -- RS Stop
//S "M 6.0" M6.0 -- +F Reset-Button
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 801 THEN //*** Reset-Button
	VAT.bSrStart := FALSE; //SR Start
	VAT.bRsStop := TRUE; //RS Stop
	VAT.bFlkResetButton := TRUE; //+F Reset-Button
	
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
	
	VAT.bA55KontaktNichtGefallen := FALSE; //NBT-NEU
END_IF



//b801: BLD 130 //Sprungadresse


//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 810 //*** Magazin Leerfahren
//==I
//SPBN b810
//S "M1.3_Stop" M1.3 -- RS Stop
//StST
//S "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 810 THEN //*** Magazin Leerfahren
	VAT.bRsStop := TRUE; //RS Stop
	
	VAT.bMagazinLeerfahren := TRUE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF

//b810: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 820 //*** Sortierer Leerfahren
//==I
//SPBN b820
//R "M1.3_Stop" M1.3 -- RS Stop

//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//S "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze


//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 820 THEN  //*** Sortierer Leerfahren
	VAT.bRsStop := FALSE; //RS Stop
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := TRUE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF

//b820: BLD 130 //Sprungadresse


//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 830 //*** Crimpen Einrichten
//==I
//SPBN b830
//R "M0.6" M0.6 -- SR Start
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//S "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze


//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 830 THEN //*** Crimpen Einrichten
	VAT.bSrStart := FALSE; //SR Start
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := TRUE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF

//b830: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 840 //*** Nur Abisolieren
//==I
//SPBN b840
//R "M0.6" M0.6 -- SR Start
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//S "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze


//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 840 THEN //*** Nur Abisolieren
	VAT.bSrStart := FALSE; //SR Start
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := TRUE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF

// b840: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 850 //*** Probelauf ohne Kontakt
//==I
//SPBN b850
//R "M0.6" M0.6 -- SR Start
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten

//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//S "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze


//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 850 THEN  //*** Probelauf ohne Kontakt
	VAT.bSrStart := FALSE; //SR Start
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := TRUE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := FALSE;
END_IF


//b850: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 860 //*** Probelauf ohne Crimpen
//==I
//SPBN b860
//R "M0.6" M0.6 -- SR Start
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//S "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//R "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze


//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 860 THEN //*** Probelauf ohne Crimpen
	VAT.bSrStart := FALSE; //SR Start
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := TRUE;
	VAT.bProbelOhneLitze := FALSE;
END_IF


//b860: BLD 130 //Sprungadresse

//L "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert
//L 870 //*** Probelauf ohne Litze
//==I
//SPBN b870
//R "M0.6" M0.6 -- SR Start
//R "M8.1MagLeerf" M8.1 -- Magazin Leerfahren
//R "M8.2SortLeerf" M8.2 -- Sortierer Leerfahren
//R "M8.3CrimpEinr" M8.3 -- Crimpen Einrichten
//R "M8.4NurAbisolieren" M8.4 -- Nur Abisolieren
//R "M8.5ohneKontakt" M8.5 -- Probelauf ohne Kontakt
//R "M8.6ohneCrmpen" M8.6 -- Probelauf ohne Crimpen
//S "M8.7ohneLitze" M8.7 -- Probelauf ohne Litze

//...springe nicht -> wenn gleich
IF DB6.w228_Bef_Tast_Wert = 870 THEN  //*** Probelauf ohne Litze
	VAT.bSrStart := FALSE; //SR Start
	VAT.bMagazinLeerfahren := FALSE;
	VAT.bSortiererLeerfahren := FALSE;
	VAT.bCrimpEinrichten := FALSE;
	VAT.bNurAbisolieren := FALSE;
	VAT.bProbelOhneKontakt := FALSE;
	VAT.bProbelOhneCrimpen := FALSE;
	VAT.bProbelOhneLitze := TRUE;
END_IF



//b870: BLD 130 //Sprungadresse
//****************************************************************************
//L 0 -- Lade die Zahl in AKKU 1 und schiebe aktuelles in AKKU 2
//T "DB6".w228_Bef_Tast_Wert DB6.DBW228 -- Befehlstasten-Wert  //Transferieren
DB6.w228_Bef_Tast_Wert := 0;

//Aend: BLD 130 //Sprungadresse
//;]]></ST>
    </Implementation>
    <LineIds Name="F_AuswertungBefehlstastenVonTP">
      <LineId Id="13" Count="25" />
      <LineId Id="286" Count="0" />
      <LineId Id="39" Count="15" />
      <LineId Id="56" Count="17" />
      <LineId Id="295" Count="0" />
      <LineId Id="74" Count="3" />
      <LineId Id="368" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="287" Count="1" />
      <LineId Id="291" Count="3" />
      <LineId Id="79" Count="9" />
      <LineId Id="90" Count="7" />
      <LineId Id="296" Count="0" />
      <LineId Id="98" Count="3" />
      <LineId Id="103" Count="0" />
      <LineId Id="367" Count="0" />
      <LineId Id="361" Count="5" />
      <LineId Id="104" Count="0" />
      <LineId Id="375" Count="1" />
      <LineId Id="105" Count="19" />
      <LineId Id="306" Count="0" />
      <LineId Id="125" Count="2" />
      <LineId Id="297" Count="1" />
      <LineId Id="300" Count="4" />
      <LineId Id="129" Count="0" />
      <LineId Id="131" Count="16" />
      <LineId Id="314" Count="1" />
      <LineId Id="148" Count="2" />
      <LineId Id="308" Count="5" />
      <LineId Id="307" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="157" Count="15" />
      <LineId Id="316" Count="1" />
      <LineId Id="173" Count="1" />
      <LineId Id="318" Count="6" />
      <LineId Id="178" Count="16" />
      <LineId Id="332" Count="1" />
      <LineId Id="195" Count="1" />
      <LineId Id="325" Count="6" />
      <LineId Id="200" Count="17" />
      <LineId Id="334" Count="1" />
      <LineId Id="218" Count="1" />
      <LineId Id="336" Count="6" />
      <LineId Id="223" Count="17" />
      <LineId Id="343" Count="1" />
      <LineId Id="241" Count="1" />
      <LineId Id="345" Count="6" />
      <LineId Id="246" Count="17" />
      <LineId Id="352" Count="0" />
      <LineId Id="264" Count="1" />
      <LineId Id="353" Count="6" />
      <LineId Id="269" Count="11" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>